--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous" />
     <!-- <link rel="stylesheet" href="css/1_reset.css"> -->
-    <link rel="stylesheet" href="css/2_normalize.css">
-    <link rel="stylesheet" href="css/3_master.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css1/2_normalize.css">
+    <link rel="stylesheet" href="css1/3_master.css">
+    <link rel="stylesheet" href="css1/navbar.css">
 </head>
 
 <body>
