--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="shortcut icon" href="images/téléchargement.svg" type="svg-xml">
 
-    <title>Blog 😆</title>
+    <title>Blog - 80Jours</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
         integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
         crossorigin="anonymous" />
@@ -62,7 +62,7 @@
         <section class="section1 d-flex row wrap jc-c ai-c bg-primary txt-white">
             <div class="cta w-600 pt-5">
                 <header class="cta__header">
-                    <h1 class="cta__title p-1 txt-white">80 Jours De Liberté</h1>
+                    <h1 class="cta__title p-1 txt-white">Bienvenue<br>80 Jours De Liberté</h1>
                 </header>
                 <div class="cta__content p-1">
                     <p class="cta__p">Sit sit veritatis. Voluptates quibusdam suscipit sequi accusamus autem ut
