--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <section class="footer__section w-1200 p-1 d-flex row wrap m-auto">
             <h3 class="txt-center p-1">FAQ</h3>
             <section class="footer__section f-300 p-1">
-                <h4>Est molestias id</h4>
+                <h4>About me</h4>
                 <ul>
                     <li>Lorem ipsim 1</li>
                     <li>Lorem ipsim 2</li>
@@ -166,7 +166,7 @@
                 </ul>
             </section>
             <section class="footer__section f-300 p-1">
-                <h4>In et illum</h4>
+                <h4>Social Media</h4>
                 <ul>
                     <li>Lorem ipsim 1</li>
                     <li>Lorem ipsim 2</li>
